[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cryptography>=44.0.2",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pymisp>=2.5.10",
    "pyopenssl>=25.0.0",
    "pyppeteer>=2.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-whois>=0.9.5",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "setuptools>=78.1.0",
    "tabulate>=0.9.0",
    "tldextract>=5.2.0",
    "trafilatura>=2.0.0",
    "validators>=0.34.0",
    "websocket-client>=1.8.0",
    "zxcvbn>=4.5.0",
]
